Headings are not structured issue fixes

--- a/sample/modules/news-image.html
+++ b/sample/modules/news-image.html
@@ -8,9 +8,9 @@
            
             <header class="w-100 text-center absolute-centered p-x">
                 <span class="btn btn-xs btn-primary rounded-0" href="#">DMV</span>
-                <h4 class="m-y-sm">
+                <h3 class="h4 m-y-sm">
                     Incredible Image post
-                </h4>
+                </h3>
 
                 <small class="color-white">
                     <i class="ca-gov-icon-time pos-rel"></i> July 04, 2016
@@ -30,9 +30,9 @@
 
             <header class="w-100 text-center absolute-centered p-x">
                 <span class="btn btn-xs btn-primary rounded-0" href="#">CDT</span>
-                <h4 class="m-y-sm">
+                <h3 class="h4 m-y-sm">
                     Demperdiet molesti volutpa
-                </h4>
+                </h3>
 
                 <small class="color-white">
                     <i class="ca-gov-icon-time pos-rel"></i> July 04, 2016
@@ -52,9 +52,9 @@
 
             <header class="w-100 text-center absolute-centered p-x">
                 <span class="btn btn-xs btn-primary rounded-0" href="#">CDTFA</span>
-                <h4 class="m-y-sm">
+                <h3 class="h4 m-y-sm">
                     Nullam non metus inmi
-                </h4>
+                </h3>
 
                 <small class="color-white">
                     <i class="ca-gov-icon-time pos-rel"></i> July 04, 2016
