--- a/sample/news-blocks.html
+++ b/sample/news-blocks.html
@@ -81,7 +81,7 @@ Based on Twitter Bootstrap
                                 <div class="modal-dialog modal-lg">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h4 class="modal-title">HTML Markup</h4>
+                                            <h3 class="h4 modal-title">HTML Markup</h3>
                                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                                         </div>
                                         <div class="modal-body">
@@ -107,7 +107,7 @@ Based on Twitter Bootstrap
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h4 class="modal-title">HTML Markup</h4>
+                                        <h3 class="h4 modal-title">HTML Markup</h3>
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     </div>
                                     <div class="modal-body">
