--- a/sample/event-list.html
+++ b/sample/event-list.html
@@ -146,7 +146,7 @@ Based on Twitter Bootstrap
         	<h2>Sidebar Example:</h2>
             <div class="card card-standout highlight">
                 <div class="card-heading">
-                    <h4><span class="ca-gov-icon-info"></span> Latest Events</h4>
+                    <h3 class="h4"><span class="ca-gov-icon-info"></span> Latest Events</h3>
                 </div>
                 <div class="card-body">
                     <!--#include virtual="/sample/modules/event-list.html" -->
