fixed mising landmark issue

--- a/SlideshowBanner-1-column.html
+++ b/SlideshowBanner-1-column.html
@@ -59,9 +59,11 @@ Based on Twitter Bootstrap
     <div class="header-decoration"></div>
 </header>
 
-    <!-- Include for optional slideshow banner -->
-    
+<!-- Include for optional slideshow banner -->
+  <section aria-label="slideshow banner">
     <!--#include virtual="/ssi/header-slideshow-banner.html" -->
+  </section>  
+
     
 
 <div id="main-content" class="main-content">
