--- a/sample/featured-search.html
+++ b/sample/featured-search.html
@@ -72,7 +72,10 @@ Based on Twitter Bootstrap
 
     <div id="main-content" class="main-content">
         <!-- Include Page Template -->
+        <section aria-label="hero banner">
         <!--#include virtual="/ssi/header-single-banner.html" -->
+        </section>
+
         <div class="section">
             <main class="main-primary">            
                 <ol class="breadcrumb">
