--- a/sample/fixed-header.html
+++ b/sample/fixed-header.html
@@ -57,8 +57,13 @@
 
 
     <div id="main-content" class="main-content">
+
         <!-- Include Page Template -->
+
+        <section aria-label="hero banner">
         <!--#include virtual="/ssi/header-large-banner.html" -->
+        </section>
+
         <div class="section">
             <main class="main-primary">
                 <ol class="breadcrumb">
