--- a/ssi/header-single-banner.html
+++ b/ssi/header-single-banner.html
@@ -1,5 +1,5 @@
 <div class="header-single-banner hidden-print" style="background-image: url('/images/main-banner.jpg');">
-  <div class="explore-invite">
+  <div class="explore-invite" style="overflow: auto;">
       <div class="text-center">
           <a href=""><span class="explore-title overflow-auto">Explore</span><span class="ca-gov-icon-arrow-down" aria-hidden="true"></span></a>
       </div>
