--- a/ssi/section-footer2.html
+++ b/ssi/section-footer2.html
@@ -1,49 +1,65 @@
-<div class="section section-impact p-b-lg">
-    <div class="container">
-        <div class="row group">
-            <div class="quarter">
-                <h3 class="h4">State Wide Campaigns</h3>
-                <ul class="list-standout">
-                    <li><a href="http://registertovote.ca.gov/" class="text-white">Register to vote</a></li>
-                    <li><a href="http://saveourwater.com/" class="text-white">Save Our Water</a></li>
-                    <li><a href="https://census.ca.gov/" class="text-white">Census 2020</a></li>
-                    <li><a href="http://caloes.ca.gov/ICESite/Pages/Summer-Heat-Resources.aspx" class="text-white">Beat the Heat</a></li>
-                </ul>
-                <a href="#" class="btn btn-primary m-t">Register</a>
-            </div>
+<section title="footer links">
+    <div class="section section-impact p-b-lg">
+        <div class="container">
+            <div class="row group">
+                <div class="quarter">
+                    <h3 class="h4">State Wide Campaigns</h3>
+                    <ul class="list-standout">
+                        <li><a href="http://registertovote.ca.gov/" class="text-white">Register to vote</a></li>
+                        <li><a href="http://saveourwater.com/" class="text-white">Save Our Water</a></li>
+                        <li><a href="https://census.ca.gov/" class="text-white">Census 2020</a></li>
+                        <li><a href="http://caloes.ca.gov/ICESite/Pages/Summer-Heat-Resources.aspx"
+                                class="text-white">Beat the Heat</a></li>
+                    </ul>
+                    <a href="#" class="btn btn-primary m-t">Register</a>
+                </div>
 
-            <div class="quarter">
-                <h3 class="h4">Alerts</h3>
-                <ul class="list-unstyled">
-                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-important-line"></span>Amber Alert</a></li>
-                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-important-line"></span>Weather</a></li>
-                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-important-line"></span>Emergency Notices</a></li>
-                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-important-line"></span>Flex Alert</a></li>
-                </ul>
-                <a href="#" class="btn btn-primary">More Alerts</a>
-            </div>
+                <div class="quarter">
+                    <h3 class="h4">Alerts</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="" class="btn btn-default btn-xs"><span
+                                    class="ca-gov-icon-important-line"></span>Amber Alert</a></li>
+                        <li><a href="" class="btn btn-default btn-xs"><span
+                                    class="ca-gov-icon-important-line"></span>Weather</a></li>
+                        <li><a href="" class="btn btn-default btn-xs"><span
+                                    class="ca-gov-icon-important-line"></span>Emergency Notices</a></li>
+                        <li><a href="" class="btn btn-default btn-xs"><span
+                                    class="ca-gov-icon-important-line"></span>Flex Alert</a></li>
+                    </ul>
+                    <a href="#" class="btn btn-primary">More Alerts</a>
+                </div>
 
-            <div class="quarter">
-                <h3 class="h4">Support</h3>
-                <ul class="list-unstyled">
-                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Email <span class="sr-only">Us</span></a></li>
-                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Feedback Survey</a></li>
-                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Technical Issues</a></li>
-                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>&#43;1.800.807.6755</a></li>
-                </ul>
-                <a href="#" class="btn btn-primary">Get Support</a>
-            </div>
+                <div class="quarter">
+                    <h3 class="h4">Support</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="" class="btn btn-default btn-xs"><span
+                                    class="ca-gov-icon-caret-line-right"></span>Email <span
+                                    class="sr-only">Us</span></a></li>
+                        <li><a href="" class="btn btn-default btn-xs"><span
+                                    class="ca-gov-icon-caret-line-right"></span>Feedback Survey</a></li>
+                        <li><a href="" class="btn btn-default btn-xs"><span
+                                    class="ca-gov-icon-caret-line-right"></span>Technical Issues</a></li>
+                        <li><a href="" class="btn btn-default btn-xs"><span
+                                    class="ca-gov-icon-caret-line-right"></span>&#43;1.800.807.6755</a></li>
+                    </ul>
+                    <a href="#" class="btn btn-primary">Get Support</a>
+                </div>
 
-            <div class="quarter">
-                <h3 class="h4">Awards</h3>
-                <ul class="list-unstyled">
-                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-check-line"></span>Best of the Web</a></li>
-                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-check-line"></span>Center for Digital Governement</a></li>
-                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-check-line"></span>NASCIO</a></li>
-                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-check-line"></span>Top Transparency</a></li>
-                </ul>
-                <a href="#" class="btn btn-primary">All Awards</a>
+                <div class="quarter">
+                    <h3 class="h4">Awards</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-check-line"></span>Best
+                                of the Web</a></li>
+                        <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-check-line"></span>Center
+                                for Digital Governement</a></li>
+                        <li><a href="" class="btn btn-default btn-xs"><span
+                                    class="ca-gov-icon-check-line"></span>NASCIO</a></li>
+                        <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-check-line"></span>Top
+                                Transparency</a></li>
+                    </ul>
+                    <a href="#" class="btn btn-primary">All Awards</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</section>
