--- a/index.html
+++ b/index.html
@@ -61,15 +61,22 @@
 
 
 <!-- Ask Bar -->
+<section aria-label="Ask bar">
 <!--#include virtual="/ssi/ask-bar.html" -->
+</section>
+
 
 
 
 
 <div id="main-content" class="main-content">
-    <h1 class="sr-only">California State Website Template (Version 5.5)</h1>
-    <!-- Include for optional slideshow banner -->
-    <!--#include virtual="/ssi/header-single-banner.html" -->
+
+    <section aria-label="Hero banner">
+        <h1 class="sr-only">California State Website Template (Version 5.5)</h1>
+        <!-- Include for optional slideshow banner -->
+        <!--#include virtual="/ssi/header-single-banner.html" -->
+    </section>
+
     <main class="main-primary">
         <!-- Begin Main Content -->
         <!--#include virtual="/ssi/section-info-blocks.html" -->
