--- a/sample/colorscheme-oceanside.html
+++ b/sample/colorscheme-oceanside.html
@@ -153,13 +153,16 @@
 
     </header>
     <div id="main-content" class="main-content">
-        <div class="container">            
-            <ol class="breadcrumb">
-                <li><a href="../index.html" title="Home page">Home</a></li>
-                <li><a href="index.html" title="Examples landing page">Examples</a></li>
-                <li class="active">Oceanside</li>
-            </ol>
-        </div>
+        <section title="breadcrumbs">
+            <div class="container">            
+                <ol class="breadcrumb">
+                    <li><a href="../index.html" title="Home page">Home</a></li>
+                    <li><a href="index.html" title="Examples landing page">Examples</a></li>
+                    <li class="active">Oceanside</li>
+                </ol>
+            </div>
+        </section>
+        
         <main class="main-primary">
             <div class="section">
                 <!-- Content Demonstration -->
