--- a/sample/colorscheme-santacruz.html
+++ b/sample/colorscheme-santacruz.html
@@ -150,13 +150,16 @@
 
     </header>
     <div id="main-content" class="main-content">
-        <div class="container">
-            <ol class="breadcrumb">
-                <li><a href="../index.html" title="Home page">Home</a></li>
-                <li><a href="index.html" title="Examples landing page">Examples</a></li>
-                <li class="active">Santa Cruz</li>
-            </ol>
-        </div>
+        <section title="breadcrumbs">
+            <div class="container">
+                <ol class="breadcrumb">
+                    <li><a href="../index.html" title="Home page">Home</a></li>
+                    <li><a href="index.html" title="Examples landing page">Examples</a></li>
+                    <li class="active">Santa Cruz</li>
+                </ol>
+            </div>
+        </section>
+        
         <main class="main-primary">
             <div class="section">
                 <!-- Content Demonstration -->
