--- a/sample/large-header-banner.html
+++ b/sample/large-header-banner.html
@@ -58,7 +58,10 @@ Based on Twitter Bootstrap
 
 <div id="main-content" class="main-content">
     <!-- Include Page Template -->
+    <section aria-label="hero banner">
     <!--#include virtual="/ssi/header-large-banner.html" -->
+    </section>
+
     <div class="section">
         <main class="main-primary">            
             <ol class="breadcrumb">
