--- a/sample/modal.html
+++ b/sample/modal.html
@@ -5,7 +5,8 @@
 <!--[if IE 9]>    <html class="no-js ie9 oldie" lang="en"> <![endif]-->
 <!--[if (gt IE 9)]><!-->
 <html class="no-js" lang="en">
- <!--<![endif]-->
+<!--<![endif]-->
+
 <head>
 
     <!--    California State Template
@@ -55,8 +56,9 @@
 
 
     <div id="main-content" class="main-content">
-        <div class="container p-b-lg">
-            <main class="main-primary">
+        <main class="main-primary">
+            <div class="container p-b-lg">
+
                 <ol class="breadcrumb">
                     <li><a href="../index.html" title="Home page">Home</a></li>
                     <li><a href="/sample/" title="Content Modules landing page">Content Modules</a></li>
@@ -65,51 +67,63 @@
 
                 <h1>Modal</h1>
                 <p>
-                    Modals offer a lightweight, multi-purpose JavaScript popup that’s customizable and responsive. They can be used to display alert popups, videos, and images in a website. State Template is using Bootstrap-based modals which are built with HTML, CSS, and JavaScript. They’re positioned over everything else in the document.
+                    Modals offer a lightweight, multi-purpose JavaScript popup that’s customizable and responsive. They
+                    can
+                    be used to display alert popups, videos, and images in a website. State Template is using
+                    Bootstrap-based modals which are built with HTML, CSS, and JavaScript. They’re positioned over
+                    everything else in the document.
                 </p>
-                <p>To trigger the modal, you’ll need to include a link or a button. The markup for the trigger element might look like this:</p>
-                <pre class="  language-markup"><code class="language-markup"><button type="button" class="btn btn-default" data-toggle="modal" data-target="#modal">Show Modal</button></code></pre>
+                <p>To trigger the modal, you’ll need to include a link or a button. The markup for the trigger element
+                    might
+                    look like this:</p>
+                <pre
+                    class="  language-markup"><code class="language-markup"><button type="button" class="btn btn-default" data-toggle="modal" data-target="#modal">Show Modal</button></code></pre>
 
-                <p>Notice the button element has two custom data attributes: <code>data-toggle</code> and <code>data-target</code>. The toggle tells Bootstrap what to do and the target tells Bootstrap which element is going to open. So, whenever a link button that is clicked, a modal with an ID of <code>#modal</code> will appear.</p>
+                <p>Notice the button element has two custom data attributes: <code>data-toggle</code> and
+                    <code>data-target</code>. The toggle tells Bootstrap what to do and the target tells Bootstrap which
+                    element is going to open. So, whenever a link button that is clicked, a modal with an ID of
+                    <code>#modal</code> will appear.
+                </p>
                 <h2>Example:</h2>
-            </main>
-        </div>
 
-        <div class="section-default">
-            <div class="container p-b-lg text-center">
-                <button type="button" class="btn btn-default btn-lg m-t-lg" data-toggle="modal" data-target="#news-headlines">Show Modal</button>
             </div>
-        </div>
 
-
-
-
-
-
-
-
-        <!-- Modal -->
-        <div class="modal fade" id="news-headlines" role="dialog">
-            <div class="modal-dialog modal-lg">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h4 class="modal-title">HTML Markup</h4>
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-
-                    </div>
-                    <div class="modal-body">
-                        <strong aria-label="Source code for Info Blocks">
-                            Modal Source Code:</label>
-                            <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/modal.html" --></code></pre>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
+            <div class="section-default">
+                <div class="container p-b-lg text-center">
+                    <button type="button" class="btn btn-default btn-lg m-t-lg" data-toggle="modal"
+                        data-target="#news-headlines">Show Modal</button>
                 </div>
             </div>
-        </div><!-- / End Modal -->
-        <hr />
 
+
+
+
+
+
+
+
+            <!-- Modal -->
+            <div class="modal fade" id="news-headlines" role="dialog">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">HTML Markup</h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+
+                        </div>
+                        <div class="modal-body">
+                            <strong aria-label="Source code for Info Blocks">
+                                Modal Source Code:</label>
+                                <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/modal.html" --></code></pre>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- / End Modal -->
+            <hr />
+        </main>
 
     </div>
 
@@ -118,4 +132,5 @@
     <!--#include virtual="/ssi/scripts.html" -->
 
 </body>
+
 </html>
