--- a/sample/slideshow-header-banner.html
+++ b/sample/slideshow-header-banner.html
@@ -64,8 +64,12 @@ Based on Twitter Bootstrap
 
 
 <div id="main-content" class="main-content">
+
     <!-- Include Optional Slideshow banner -->
+    <section aria-label="Slideshow banner">
     <!--#include virtual="/ssi/header-slideshow-banner.html" -->
+    </section>
+
     <div class="section">
         <main class="main-primary">            
             <ol class="breadcrumb">
