Fixed Text is clipped when zoomed in issue

--- a/sample/modules/carousel-content-fit-image.html
+++ b/sample/modules/carousel-content-fit-image.html
@@ -1,4 +1,4 @@
-<div class="carousel owl-carousel carousel-content">
+<div class="carousel owl-carousel carousel-content overflow-auto">
     <div class="item">
         <img src="/sample/images/gallery/orangecounty-big.jpg" alt="">
         <div class="content-container">
