--- a/sample/modules/form-select.html
+++ b/sample/modules/form-select.html
@@ -1,7 +1,7 @@
 <!--Select-->
-<label class="select">
+<label class="select overflow-auto">
     <span class="sr-only">Select options:</span>
-    <select name="email" id="email" class="overflow-auto">
+    <select name="email" id="email">
         <option>Option 1</option>
         <option>Option 2</option>
         <option>Option 3</option>
