--- a/sample/modules/progress-bar-variety.html
+++ b/sample/modules/progress-bar-variety.html
@@ -1,18 +1,18 @@
-<div class="progress m-b-md  height-50 rounded-50">
-    <div class="progress-bar bg-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-        <span class="font-size-25 overflow-auto">60%</span>
+<div class="progress m-b-md  height-50 rounded-50 overflow-auto">
+    <div class="progress-bar bg-success overflow-auto" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+        <span class="font-size-25">60%</span>
     </div>
 </div>
 
 <h3 class="m-b-sm h6">Project Completeness</h3>
-<div class="progress height-20 m-b-md overflow-visible">
-    <div class="progress-bar pos-rel bg-primary" role="progressbar" style="width: 83%" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100">
-        <div class="text-center progress-pointer bg-primary font-size-12 overflow-auto">83%</div>
+<div class="progress height-20 m-b-md overflow-visible overflow-auto">
+    <div class="progress-bar pos-rel bg-primary overflow-auto" role="progressbar" style="width: 83%" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100">
+        <div class="text-center progress-pointer bg-primary font-size-12">83%</div>
     </div>
 </div>
 
 
 <h3 class="m-b-sm h6">Project Completeness <span class="float-right ml-10">73%</span></h3>
-<div class="progress height-5 m-b-md">
-    <div class="progress-bar bg-dark" role="progressbar" style="width: 73%" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100"></div>
+<div class="progress height-5 m-b-md  overflow-auto">
+    <div class="progress-bar bg-dark overflow-auto" role="progressbar" style="width: 73%" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
