--- a/sample/modules/progress-bar-stacked.html
+++ b/sample/modules/progress-bar-stacked.html
@@ -1,11 +1,11 @@
-<div class="progress">
-    <div class="progress-bar bg-highlight" style="width: 35%">
+<div class="progress overflow-auto">
+    <div class="progress-bar bg-highlight overflow-auto" style="width: 35%">
         <span class="sr-only">35% Complete (success)</span>
     </div>
-    <div class="progress-bar bg-danger progress-bar-striped" style="width: 20%">
+    <div class="progress-bar bg-danger progress-bar-striped overflow-auto" style="width: 20%">
         <span class="sr-only">20% Complete (warning)</span>
     </div>
-    <div class="progress-bar bg-primary" style="width: 10%">
+    <div class="progress-bar bg-primary overflow-auto" style="width: 10%">
         <span class="sr-only">10% Complete (danger)</span>
     </div>
 </div>
