--- a/ssi/header-slideshow-banner.html
+++ b/ssi/header-slideshow-banner.html
@@ -1,13 +1,13 @@
-<div class="header-slideshow-banner hidden-print" style="min-height:460px">
+<div class="header-slideshow-banner hidden-print overflow-auto" style="min-height:460px">
     <div id="primary-carousel" class="carousel owl-carousel carousel-banner">
         <div class="slide" style="background-image: url('/images/main-banner.jpg');">
             <a href="/">
-                <p class="slide-text overflow-auto"><span class="title">Slideshow Banner</span><br>Caption for rotating banner. This caption is a link!</p>
+                <p class="slide-text"><span class="title">Slideshow Banner</span><br>Caption for rotating banner. This caption is a link!</p>
             </a>
         </div>
         <div class="slide" style="background-image: url('/images/background-primary.jpg');">
             <a href="/">
-                <p class="slide-text overflow-auto"><span class="title">Slideshow Banner</span><br>Caption for rotating banner.<br> This caption is a link!</p>
+                <p class="slide-text"><span class="title">Slideshow Banner</span><br>Caption for rotating banner.<br> This caption is a link!</p>
             </a>
         </div>
         <div class="slide" style="background-image: url('/images/background.jpg');">
