Scrollable element is not keyboard accessible issue fix, removed old v4 template navigation

--- a/sample/service-group.html
+++ b/sample/service-group.html
@@ -84,7 +84,7 @@
                 <div class="group">
 
                     <h2>Source Code:</h2>
-                    <pre class="height-600"><code class="overflow-auto"><!--#include virtual="/sample/modules/service-tiles.html" --></code></pre>
+                    <pre><code><!--#include virtual="/sample/modules/service-tiles.html" --></code></pre>
                     <div class="clearfix"><br /></div>
                 </div>
             </div>
