--- a/sample/modules/progress-bar.html
+++ b/sample/modules/progress-bar.html
@@ -1,5 +1,5 @@
-<div class="progress overflow-auto">
-    <div class="progress-bar bg-highlight color-gray-dark overflow-auto" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+<div class="progress">
+    <div class="progress-bar bg-highlight color-gray-dark overflow-auto" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"  tabindex="0">
         60%
     </div>
 </div>
