--- a/sample/modules/table-responsive.html
+++ b/sample/modules/table-responsive.html
@@ -1,4 +1,4 @@
-<div class="table-responsive">
+<div class="table-responsive" tabindex="0">
       <table class="table">
         <thead>
           <tr>
