Fixed color contrast issues on some pages

--- a/general-landing.html
+++ b/general-landing.html
@@ -96,7 +96,7 @@
                     <div class="group">
                         <div class="third m-b-md">
                             <!-- Article -->
-                            <article class="block-hover">
+                            <article class="block-hover section-standout">
                                 <figure class="bg-overlay">
                                     <img class="img-fluid w-100 block-hover_zoom" src="/sample/images/service-find-job.jpg" alt="Image Description">
                                 </figure>
@@ -118,7 +118,7 @@
                         </div>
                         <div class="third m-b-md">
                             <!-- Article -->
-                            <article class="block-hover">
+                            <article class="block-hover section-standout">
                                 <figure class="bg-overlay">
                                     <img class="img-fluid w-100 block-hover_zoom" src="/sample/images/service-tiles/service-file-unemployment.jpg" alt="Image Description">
                                 </figure>
@@ -140,7 +140,7 @@
                         </div>
                         <div class="third m-b-md">
                             <!-- Article -->
-                            <article class="block-hover">
+                            <article class="block-hover section-standout">
                                 <figure class="bg-overlay">
                                     <img class="img-fluid w-100 block-hover_zoom" src="/sample/images/service-tiles/service-paid-family-leave.jpg" alt="Image Description">
                                 </figure>
