--- a/sample/modules/news-image.html
+++ b/sample/modules/news-image.html
@@ -1,7 +1,7 @@
 <div class="group">
     <div class="third m-b-md">
         <!-- Article -->
-        <article class="block-hover">
+        <article class="block-hover section-standout">
             <figure class="bg-overlay">
                 <img class="img-fluid w-100 block-hover_zoom" src="images/500x450.jpg" alt="Image Description">
             </figure>
@@ -23,7 +23,7 @@
     </div>
     <div class="third m-b-md">
         <!-- Article -->
-        <article class="block-hover">
+        <article class="block-hover section-standout">
             <figure class="bg-overlay">
                 <img class="img-fluid w-100 block-hover_zoom" src="images/500x450.jpg" alt="Image Description">
             </figure>
@@ -45,7 +45,7 @@
     </div>
     <div class="third m-b-md">
         <!-- Article -->
-        <article class="block-hover">
+        <article class="block-hover section-standout">
             <figure class="bg-overlay">
                 <img class="img-fluid w-100 block-hover_zoom" src="images/500x450.jpg" alt="Image Description">
             </figure>
