--- a/sample/colorscheme-eureka.html
+++ b/sample/colorscheme-eureka.html
@@ -293,7 +293,7 @@
                     <div class="half">
                         <!-- Article -->
                         <h3>News block</h3>
-                        <article class="block-hover">
+                        <article class="block-hover section-standout">
                             <figure class="bg-overlay">
                                 <img class="img-fluid w-100 block-hover_zoom" src="/sample/images/service-tiles/service-paid-family-leave.jpg" alt="Image Description">
                             </figure>
