--- a/sample/modules/carousel-content-fit-image.html
+++ b/sample/modules/carousel-content-fit-image.html
@@ -1,9 +1,9 @@
-<div class="carousel owl-carousel carousel-content overflow-auto">
-    <div class="item">
+<div class="carousel owl-carousel carousel-content">
+    <div class="item section-standout">
         <img src="/sample/images/gallery/orangecounty-big.jpg" alt="">
         <div class="content-container">
             <div class="content">
-                <h2 class="overflow-auto">Large Hero Content</h2>
+                <h2>Large Hero Content</h2>
             </div>
         </div>
     </div>
@@ -11,7 +11,7 @@
         <img src="/sample/images/gallery/sierra-big.jpg" alt="">
         <div class="content-container">
             <div class="content">
-                <button class="btn btn-primary overflow-auto">Learn More</button>
+                <button class="btn btn-primary">Learn More</button>
             </div>
         </div>
     </div>
@@ -20,7 +20,7 @@
         <img src="/sample/images/example.gif" alt="">
         <div class="content-container">
             <div class="content">
-                <button class="btn btn-primary overflow-auto">Learn More</button>
+                <button class="btn btn-primary">Learn More</button>
             </div>
         </div>
     </div>
