Fixed Hidden element has focusable content issue

--- a/sample/modules/nav-full-width.html
+++ b/sample/modules/nav-full-width.html
@@ -37,23 +37,23 @@
                     <div class="nav-media">
                         <div class="media unit2">
                             <div class="media-left">
-                                <a href="#"><img class="media-object" src="/sample/images/70x70.gif" alt="..."></a>
+                                <a href="#" class="second-level-link"><img class="media-object" src="/sample/images/70x70.gif" alt="..."></a>
                             </div>
                             <div class="media-body">
-                                <div class="title"><a href="">Public profile</a></div>
+                                <div class="title"><a href="" class="second-level-link">Public profile</a></div>
                                 <div class="teaser">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</div>
-                                <a href="" class="btn btn-default btn-xs float-right">Read More</a>
+                                <a href="#" class="btn btn-default btn-xs float-right second-level-link">Read More</a>
                             </div>
                         </div>
 
                         <div class="media unit2">
                             <div class="media-left">
-                                <a href="#"><img class="media-object" src="/sample/images/70x70.gif" alt="..."></a>
+                                <a href="#"  class="second-level-link"><img class="media-object" src="/sample/images/70x70.gif" alt="..."></a>
                             </div>
                             <div class="media-body">
-                                <div class="title"><a href="">News Title</a></div>
+                                <div class="title"><a href=""  class="second-level-link">News Title</a></div>
                                 <div class="teaser">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</div>
-                                <a href="" class="btn btn-default btn-xs float-right">Read More</a>
+                                <a href="#" class="btn btn-default btn-xs float-right second-level-link">Read More</a>
                             </div>
                         </div>
                     </div>
