--- a/sample/modules/nav-megamenu-mobile-icons.html
+++ b/sample/modules/nav-megamenu-mobile-icons.html
@@ -57,23 +57,23 @@
                     <div class="nav-media">
                         <div class="media unit2">
                             <div class="media-left">
-                                <a href="#"><img class="media-object" src="/sample/images/70x70.gif" alt="..."></a>
+                                <a href="#"  class="second-level-link"><img class="media-object" src="/sample/images/70x70.gif" alt="..."></a>
                             </div>
                             <div class="media-body">
-                                <div class="title"><a href="">Public profile</a></div>
+                                <div class="title"><a href="" class="second-level-link">Public profile</a></div>
                                 <div class="teaser">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</div>
-                                <a href="" class="btn btn-default btn-xs float-right">Read More</a>
+                                <a href="" class="btn btn-default btn-xs float-right second-level-link">Read More</a>
                             </div>
                         </div>
 
                         <div class="media unit2">
                             <div class="media-left">
-                                <a href="#"><img class="media-object" src="/sample/images/70x70.gif" alt="..."></a>
+                                <a href="#"  class="second-level-link"><img class="media-object" src="/sample/images/70x70.gif" alt="..."></a>
                             </div>
                             <div class="media-body">
-                                <div class="title"><a href="">News Title</a></div>
+                                <div class="title"><a href=""  class="second-level-link">News Title</a></div>
                                 <div class="teaser">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</div>
-                                <a href="" class="btn btn-default btn-xs float-right">Read More</a>
+                                <a href="" class="btn btn-default btn-xs float-right second-level-link">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -190,7 +190,7 @@
             <a href="/contact.html" class="first-level-link"><span class="ca-gov-icon-lightbulb" aria-hidden="true"></span>Contact Us</a>
         </li>
         <li class="nav-item" id="nav-item-search">
-            <a href="javascript:;" class="first-level-link"><span class="ca-gov-icon-search" aria-hidden="true"></span>Search</a>
+            <button class="first-level-link"><span class="ca-gov-icon-search" aria-hidden="true"></span>Search</button>
         </li>
     </ul>
 </nav>
