Fixed Container element is empty issue

--- a/service-profile.html
+++ b/service-profile.html
@@ -94,9 +94,9 @@
                             </div>
 
                             <ul class="list-inline list-unstyled m-t-md social">
-                                <li class="list-inline-item"><a href=""><span class="ca-gov-icon-twitter" aria-hidden="true"><span class="sr-only">Twitter DMV</span></span></a></li>
-                                <li class="list-inline-item"><a href=""><span class="ca-gov-icon-facebook" aria-hidden="true"><span class="sr-only">Facebook DMV</span></span></a></li>
-                                <li class="list-inline-item"><a href=""><span class="ca-gov-icon-google-plus" aria-hidden="true"><span class="sr-only">Google+ DMV</span></span></a></li>
+                                <li class="list-inline-item"><a href=""><span class="ca-gov-icon-twitter" aria-hidden="true"></span><span class="sr-only">Twitter DMV</span></a></li>
+                                <li class="list-inline-item"><a href=""><span class="ca-gov-icon-facebook" aria-hidden="true"></span><span class="sr-only">Facebook DMV</span></a></li>
+                                <li class="list-inline-item"><a href=""><span class="ca-gov-icon-google-plus" aria-hidden="true"></span><span class="sr-only">Google+ DMV</span></a></li>
                             </ul>
                         </div>
                     </div>
