--- a/sample/modules/tabs-responsive.html
+++ b/sample/modules/tabs-responsive.html
@@ -12,9 +12,9 @@
     </ul>
 
 
-    <div id="tab-content" class="tab-content" role="tablist">
+    <div id="tab-content" class="tab-content">
         <div id="pane-home" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-home">
-            <div class="card-header" role="tab" id="heading-home">
+            <div class="card-header" id="heading-home">
                 <h5 class="my-0">
                     <a data-toggle="collapse" href="#collapse-home" data-parent="#tab-content" aria-expanded="true" aria-controls="collapse-home" title="Location tab header">
                         Location
@@ -29,7 +29,7 @@
         </div>
 
         <div id="pane-profile" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-profile">
-            <div class="card-header" role="tab" id="heading-profile">
+            <div class="card-header" id="heading-profile">
                 <h5 class="my-0">
                     <a class="collapsed" data-toggle="collapse" href="#collapse-profile" data-parent="#tab-content" aria-expanded="false" aria-controls="collapse-profile" title="Context tab header">
                         Context
@@ -44,7 +44,7 @@
         </div>
 
         <div id="pane-messages" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-messages">
-            <div class="card-header" role="tab" id="heading-messages">
+            <div class="card-header" id="heading-messages">
                 <h5 class="my-0">
                     <a class="collapsed" data-toggle="collapse" href="#collapse-messages" data-parent="#tab-content" aria-expanded="false" aria-controls="collapse-messages" title="Communication tab header">
                         Communication
