Fixed Form field is not labeled issue

--- a/sample/parallax.html
+++ b/sample/parallax.html
@@ -92,7 +92,7 @@ Based on Twitter Bootstrap
 
 
             <div class="container p-b-lg">
-                <h2><label for="sample-panels">Source Code:</label></h2>
+                <h2><label for="sample-accordion-list">Source Code:</label></h2>
                 <div class="form-group">
 <textarea id="sample-accordion-list" class="form-control" rows="17" cols="80"><div class="parallax-bg" id="parallax-1" data-image-src="/images/background-primary.jpg">
                     <div class="section-impact width-200 height-80 brd-gray-light brd-solid-1 relative-centered">
