Fixed Line height is fixed issue

--- a/sample/colorscheme-names.html
+++ b/sample/colorscheme-names.html
@@ -39,7 +39,7 @@
       float: left;
       color: #555;
       font-size: 12px;
-      line-height: 16px;
+      line-height: 1rem;
       margin: 0 0 0 10px;
     }
     h3 {
