--- a/sample/colorscheme-oceanside.html
+++ b/sample/colorscheme-oceanside.html
@@ -117,7 +117,7 @@
         div.caption {
             color: #555;
             font-size: 12px;
-            line-height: 16px;
+            line-height: 1rem;
             margin: 0 0 0 10px;
             text-align: center;
         }
